--- a/Main/client/React-Website/tsconfig.json
+++ b/Main/client/React-Website/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "jsx": "react-jsx",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "outDir": "./dist"
   },
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "include": ["server/**/*.ts"],
+  "exclude": ["node_modules"]
 }
