--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "concurrently": "^8.2.2",
-    "nodemon": "^3.1.3",
+    "nodemon": "^3.1.9",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "bcrypt": "^2.0.0",   
+    "jsonwebtoken": "^9.0.2"
   }
 }
