--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run client:build && npm run server",
@@ -21,13 +22,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
+    "@types/sequelize": "^4.28.20",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.9",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
-    "bcrypt": "^2.0.0",   
-    "jsonwebtoken": "^9.0.2"
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "sequelize": "^6.37.5"
   }
 }
