adding starter habitica code

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "main",
   "version": "1.0.0",
-  "description": "",
+  "description": "Heroic Habits turns habit-building into an engaging adventure where users become the hero of their own story. By creating a personalized profile and hero avatar, users transform daily routines into quests and track their progress through a visually immersive journey. With its unique quest system and storytelling elements, Heroic Habits makes self-improvement fun and motivating.",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
@@ -31,11 +32,13 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "sequelize": "^6.37.5"
   }
 }
