--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "sequelize": "^6.37.5",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
      "morgan": "^1.10.0",
     "sequelize": "^6.37.5"
   }
