--- a/server/src/api/Habitica/package.json
+++ b/server/src/api/Habitica/package.json
@@ -8,9 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7"
-  }
+  },
+  "description": ""
 }
