--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,14 +5,16 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true, // Ensure that the output files are not emitted
+    "noEmit": true,
     "jsx": "react-jsx",
-    "outDir": "./build", // Specify the output directory for compiled JS files
+
+    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
