--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run client:build && npm run server --port 3001",
+    "start": "npm run client:build && npm run server",
     "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
@@ -32,7 +32,6 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
-    "axios": "^1.7.9",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
