--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true, // Ensures compatibility for common modules
     "strict": true,
     "outDir": "./dist",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
   },
   "include": ["src"]
 }
