--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/sequelize": "^4.28.20",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.9",
+    "typescript": "^5.7.3",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
