--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "src",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "npm run build && node dist/server.js",
-    "dev": "npx nodemon",
+    "start": "node dist/server.js",
+    "dev": "npx nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node dist/seeds/index.js"
   },
@@ -16,7 +16,7 @@
       "src"
     ],
     "ext": "ts,json,js",
-    "exec": "npx tsc && node dist/server.js"
+    "exec": "npx ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
   }
 }
