--- a/package.json
+++ b/package.json
@@ -6,22 +6,16 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    
-    "start": "node server/dist/server.js",
+    "start": "npm run client:build && npm run server",
     "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
-    
-    "server": "cd server && node dist/server.js",
-    "server:dev": "cd server && nodemon src/server.ts", 
-
-    "install": "cd server && npm ci && cd ../client && npm ci",
-    
-    "build": "npm run server:build && npm run client:build",
-    "server:build": "cd server && npm run build",
+    "server": "cd server && npm start",
+    "server:dev": "cd server && npm run dev",
+    "install": "cd server && npm i && cd ../client && npm i",
     "client:build": "cd client && npm run build",
-
+    "client:dev": "cd client && npm run dev",
+    "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
-    
-    "postinstall": "npm run build"
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
