--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/node-fetch": "^2.6.12",
     "@types/sequelize": "^4.28.20",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.9",
