--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,17 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "esModuleInterop": true,
+    "module": "ESNext", // Ensures ES Modules syntax is used
+    "moduleResolution": "node",
+    "esModuleInterop": true, // Ensures compatibility for common modules
     "strict": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
